test/corpus/function.txt
===============================
Functions
===============================

fn main {
  let a = 2
  let b = 2 + 2
  let b = 2 + 2 - 2
}

---
(program
  (function_declaration
    (identifier)
    (block
      (let_binding
        (identifier)
        (number))
      (let_binding
        (identifier)
        (binary_expression
          (plus_expression
            (number)
            (number))))
      (let_binding
        (identifier)
          (binary_expression
            (minus_expression
              (binary_expression
                (plus_expression
                  (number)
                  (number)))
                (number)))))))
